// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

datasource db {
  provider = "postgresql"
}
generator client {
  provider = "prisma-client-js"
}

enum Role {
  PATIENT
  DOCTOR
  MANAGER
  SYSTEM_ADMIN
}

enum Weekday {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}

enum AppointmentStatus {
  PENDING
  CONFIRMED
  CANCELLED
}

enum PatientDocumentType {
  CONTRACT
  PRESCRIPTION
  VISIT_PROTOCOL
}

model User {
  id              Int              @id @default(autoincrement())
  email           String           @unique
  /// Нормализованный российский номер: 11 цифр, начинается с 7 (например 79991234567). Уникален, если задан.
  phone           String?          @unique
  fullName        String
  role            Role             @default(PATIENT)
  passwordHash    String
  avatarUrl       String?
  doctorBio       String?          @db.Text
  doctorSymptoms  Json?
  createdAt       DateTime         @default(now())
  doctorSchedules DoctorSchedule[]
  doctorDiplomas  DoctorDiploma[]
  doctorAppointments Appointment[] @relation("DoctorAppointments")
  patientAppointments Appointment[] @relation("PatientAppointments")
  patientDocuments PatientDocument[] @relation("PatientDocuments")
  uploadedPatientDocuments PatientDocument[] @relation("ManagerUploadedPatientDocuments")
  doctorPatientNotes PatientNote[] @relation("DoctorPatientNotes")
  patientDoctorNotes PatientNote[] @relation("PatientDoctorNotes")
}

model Appointment {
  id             Int      @id @default(autoincrement())
  doctorId       Int
  patientId      Int
  slotDate       DateTime @db.Date
  startTime      String
  endTime        String
  contactPhone   String?
  status         AppointmentStatus @default(PENDING)
  createdAt      DateTime @default(now())

  doctor  User @relation("DoctorAppointments", fields: [doctorId], references: [id], onDelete: Cascade)
  patient User @relation("PatientAppointments", fields: [patientId], references: [id], onDelete: Cascade)

  @@index([doctorId, slotDate])
  @@index([patientId, slotDate])
  @@index([doctorId, slotDate, startTime, endTime])
}

model DoctorSchedule {
  id        Int      @id @default(autoincrement())
  doctorId  Int
  weekStartDate DateTime @db.Date
  weekday   Weekday
  startTime String
  endTime   String
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())

  doctor User @relation(fields: [doctorId], references: [id], onDelete: Cascade)

  @@unique([doctorId, weekStartDate, weekday, startTime, endTime])
}

model DoctorDiploma {
  id        Int      @id @default(autoincrement())
  doctorId  Int
  title     String
  issuedBy  String?
  year      Int?
  /// Относительный путь к PDF внутри uploads/doctors/{id}/ (колонка в БД: imageUrl)
  filePath  String   @map("imageUrl")
  createdAt DateTime @default(now())

  doctor User @relation(fields: [doctorId], references: [id], onDelete: Cascade)

  @@index([doctorId])
}

model PatientDocument {
  id         Int                 @id @default(autoincrement())
  patientId  Int
  managerId  Int
  type       PatientDocumentType
  filePath   String
  createdAt  DateTime            @default(now())

  patient User @relation("PatientDocuments", fields: [patientId], references: [id], onDelete: Cascade)
  manager User @relation("ManagerUploadedPatientDocuments", fields: [managerId], references: [id], onDelete: Cascade)

  @@index([patientId, createdAt])
  @@index([managerId, createdAt])
}

model PatientNote {
  id         Int      @id @default(autoincrement())
  doctorId   Int
  patientId  Int
  content    String?  @db.Text
  filePath   String?
  fileName   String?
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  doctor User @relation("DoctorPatientNotes", fields: [doctorId], references: [id], onDelete: Cascade)
  patient User @relation("PatientDoctorNotes", fields: [patientId], references: [id], onDelete: Cascade)

  @@index([doctorId, patientId, createdAt])
}
